<resources>
    <string name="app_name">Cataplus</string>
    <string name="misclaves">key alias elpyro01 keystore elpyro01 keypasword elpyro01 </string>
    <string name="interstitial_ad_unit_id">ca-app-pub-5390342068041092/6706005035</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="banner">banner</string>
    <string name="banner_cuadrado">banner_cuadrado</string>
    <string name="total">Total</string>
    <string name="carrito">Carrito</string>
    <string name="restar_cantidad">Restar cantidad</string>
    <string name="foto">Foto</string>
    <string name="disponible">Disponible</string>
    <string name="precio">Precio</string>
    <string name="nombre">Nombre</string>
    <string name="_0">0</string>
    <string name="producto">Producto</string>
    <string name="compra">Surtir  mi negocio</string>
    <string name="venta">Catálogo</string>
    <string name="detalleProducto">Detalle del producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="NuevoProducto">Nuevo Producto</string>
    <string name="total_0">Total: 0</string>
    <string name="microfono">Microfono</string>
    <string name="disponbleEnlaNuebe">Los datos estaran en la nube cuando te conectes a internet</string>
    <string name="telefono">Telefono</string>
    <string name="documento">Documento</string>
    <string name="direccion">Dirección</string>
    <string name="inf_pedido">Información del pedido</string>
    <string name="item">Items</string>
    <string name="referencias">Referencias</string>
    <string name="variante">Variante</string>
    <string name="envio">Envio</string>
    <string name="sub_total">Sub-Total: </string>
    <string name="informacion">Informacion:</string>
    <string name="descuento">Descuento</string>
    <string name="impuesto">Impuesto</string>
    <string name="buscarUsuario">Buscar Usuario</string>
    <string name="detalleFactura">Detalle Factura</string>
    <string name="confirmar">Confirmar</string>
    <string name="seleccion">Selección</string>
    <string name="total_producto">Total Producto</string>
    <string name="Registros">Registros</string>
    <string name="cliente">Cliente</string>
    <string name="vendedor">Vendedor</string>
    <string name="fecha">Fecha</string>
    <string name="id">ID</string>
    <string name="Agregar_producto">Agregar Productos</string>
    <string name="RegistroVentas">Registro de Ventas</string>
    <string name="tienda">Tienda</string>
    <string name="detalleCompra">Detalle Surtido</string>
    <string name="RegistroCompras">Registro de Surtido</string>
    <string name="RegistrosVentas">Registro de Ventas</string>
    <string name="compartir">Compartir</string>
    <string name="PDF">Pdf</string>
    <string name="pdf">PDF</string>
    <string name="configuracion">Configuración</string>
    <string name="datosempresa">Datos de Empresa</string>
    <string name="sonido">Sonido</string>
    <string name="inf_superior">Información Superior</string>
    <string name="inf_inferior">Información Inferior</string>
    <string name="otras_configuraciones">Otras Configuraciones</string>
    <string name="cambiar">Cambiar</string>
    <string name="empresa">Empresa</string>
    <string name="telefono1">Telefono 1</string>
    <string name="telefono2">Telefono 2</string>
    <string name="pagina">Página</string>
    <string name="correo">Correo</string>
    <string name="garantia">Terminos de garantia</string>
    <string name="ver_pdf">Ver PDF</string>
    <string name="clientes">Clientes</string>
    <string name="NuevoCliente">Nuevo Cliente</string>
    <string name="Reportes">Reportes\n</string>
    <string name="Inventario">Inventario</string>
    <string name="SeleccioneInforme">Seleccione Tipo de Informe</string>
    <string name="VerPDF">Ver PDF</string>
    <string name="Usuario">Usuario</string>
    <string name="administrador">Administrador</string>
    <string name="inactivo">Inactivo</string>
    <string name="Usuarios">Usuarios</string>
    <string name="gmail">\@gmail.com</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_session">Cerrar Sesion</string>
    <string name="mi_sesion">Mi sesion</string>
    <string name="detalleSesion">Detalle Sesion</string>
    <string name="usuarioNoResgistrado">Usuario No Registrado</string>
    <string name="referido">Codigo Referido</string>
    <string name="registrarUsuario">Registrar Usuario</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_nuevo_usuario">NuevoUsuario</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="NuevoUsuario">Nuevo Usuario</string>
    <string name="Catalogo">Catálogo</string>
    <string name="CompraRapidita">Cataplus</string>
    <string name="Pagos">Pagos</string>
    <string name="Supcripciones">Suscripciones</string>
    <string name="NombreEmpresa">Nombre Empresa</string>
    <string name="Administrador">Administrador</string>
    <string name="descripcionPublicitaria">BIENVENIDO A CATAPLUS  \n La plataforma  de inventario con multiples usuarios.\nTus usuarios también podran trabajar con/sin intenet para sicronizar posteriormente.\nLas ventas y compran se sicronizan en todos los dipositivos.\nGozaras de perfiles para administradores y vendedores.\nRegistra tu empresa conoce las herramientas y aprovecha el mes de prueba GRATÍS.\n\n\n\n</string>
    <string name="Plan_vencido">Plan Vencido</string>
    <string name="InformacionPublicidad">- Conectar multiples vendedores al mismo inventario</string>
    <string name="InformacionPublicidad2">- Trabaja con o sin internet. Sicronizaciones automaticas</string>
    <string name="InformacionPublicidad3">- Multiples planes pagos o gratís. Empieza hoy y gana (1) mes gratís para 20 usuarios</string>
    <string name="InformacionPublicidad4">- Comparte tus facturas, catálogos y reportes con la impresora o redes sociales en PDF</string>
    <string name="AdministraTuNegocio">Administra tu negocio</string>
    <string name="cambiarCuenta">Cambiar Cuenta</string>
    <string name="precioCompra">Compra</string>
    <string name="PlanEmpresarial">Plan Empresarial</string>
    <string name="descripcionPlanEmpresarial">-Conecta 30 usuarios al inventario. \n-Sin publicidad</string>
    <string name="comentario">Descripción del producto</string>
    <string name="proveedorDeSurtido">Nombre del proveedor</string>
    <string name="Agregar_inventario">Agregar a inventario</string>
    <string name="busquedas">Proveedor, Producto</string>
    <string name="descripcionPlanPremium">-Conecta 6 usuarios al inventario. \n-Sin publicidad</string>
    <string name="PlanPremium">Plan Premium</string>
    <string name="descripcionPlanBasico">-Conecta 3 usuarios al inventario.  \n-Sin publicidad</string>
    <string name="PlanBasico">Plan Básico</string>
    <string name="ReporteVentas">Reporte de ventas</string>
    <string name="MostrarAgotados">Mostrar Agotados en Catalogo</string>
    <string name="informacion_producto">Información del producto</string>
    <string name="MostrarPrecioCompra">Mostrar Precio de Compra a Vendedores</string>
    <string name="informacionAdicional">Información Adicional(Factura)</string>
    <string name="Publicidad3">Control de Inventario y Facturación \nMulti-Usuarios</string>
    <string name="PlanGratuito">Plan Gratuito</string>
    <string name="descripcionGratuito">-Conecta 1 usuario al inventario gratís \n-Con publicidad</string>
    <string name="title_activity_instersticial">Instersticial</string>
    <string name="descripcionPlanPago">"<b><font color='#FF9000'>      Gestión de Inventario:</font></b>  \nAdministración completa del inventario, incluyendo la adición, venta y edición de productos y control de existencias. \n<b><font color='#FF9000'>      Facturación Profesional:</font></b> \nGenera facturas profesionales para tus clientes con todos los detalles de la venta y datos de tú empresa. \n<b><font color='#FF9000'>      Reportes de Desempeño:</font></b>\nObtén información valiosa sobre las ventas, ganancias, productos más vendidos y compras. Los administradores pueden acceder a un conjunto completo de informes detallados.\n<b><font color='#FF9000'>      Generación de Reportes en PDF</font></b> \nConvierte tus informes y facturas en archivos PDF que puedes compartir fácilmente con tu equipo o socios comerciales.\n<b><font color='#FF9000'>      Catálogos de Productos:</font></b>\nCrea y gestiona catálogos de productos para mostrar a tus clientes, lo que facilita la presentación y venta de productos. \n<b><font color='#FF9000'>      Ventas por Vendedor:</font></b>\nRealiza un seguimiento del desempeño individual de tus vendedores y obtén información sobre quién está logrando las mejores ventas. \n<b><font color='#FF9000'>      Perfiles Personalizados:</font></b>\nCrea perfiles de administradores y vendedores a partir de cuentas de Gmail. \n- Administradores: pueden personalizar roles, asignar permisos y acceder a informes completos, además de comprar, vender y editar inventarios.\n- Vendedores: pueden realizar ventas sin editar el inventario; los administradores le pueden asignar permisos especiales."</string>
    <string name="PlanesDisponibles">Planes Disponibles:</string>
    <string name="descripcionPlanGratis">"<b><font color='#FF9000'>      Gestión de Inventario:</font></b>  \nAdministración completa del inventario, incluyendo la adición, venta y edición de productos y control de existencias. \n<b><font color='#FF9000'>      Facturación Profesional:</font></b> \nGenera facturas profesionales para tus clientes con todos los detalles de la venta y datos de tú empresa. \n<b><font color='#FF9000'>      Reportes de Desempeño:</font></b>\nObtén información valiosa sobre las ventas, ganancias, productos más vendidos y compras. Los administradores pueden acceder a un conjunto completo de informes detallados.\n<b><font color='#FF9000'>      Generación de Reportes en PDF</font></b> \nConvierte tus informes y facturas en archivos PDF que puedes compartir fácilmente con tu equipo o socios comerciales.\n<b><font color='#FF9000'>      Catálogos de Productos:</font></b>\nCrea y gestiona catálogos de productos para mostrar a tus clientes, lo que facilita la presentación y venta de productos. \n<b><font color='#FF9000'>      Perfil Administrador Activo:</font></b>\nPuedes usar todas las funciones con un unico usuario, el creador de la cuenta."  </string>
    <string name="compartirWhastapp">Compartir a WhastsApp</string>
    <string name="ExplicacionBienvenida"><![CDATA[Crear tu primer producto. \nIngresa a: \n\n 1- Menú \n2- Nuevo producto]]></string>
    <string name="surtirMiInventario">Surtir mi Inventario</string>
    <string name="ExplicacionPanelInventario">Aquí podras: \n- Crear o editar productos. \n- Surtir tu negocio para que quede el registro</string>
    <string name="GuardaCliente">Guarda tu primer cliente</string>
    <string name="Explicacion_registros">Aquí podras ver tus registros cuando los tengas</string>
    <string name="Genial">Genial, empecemos...</string>
    <string name="ExplicacionBienvenida2">Surte y comercializa con 1 o más usuarios</string>
    <string name="NombreProducto">Nombre del producto</string>
    <string name="preciodeCompra">Precio Compra</string>
    <string name="precioventa">Precio Venta</string>
    <string name="creaTuInventario">Crea tú inventario</string>
    <string name="ReciboIngreso">Recibo de ingreso</string>
</resources>