<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/fondo">

    <PreferenceCategory
        app:key="informacion_adicional"
        app:title="@string/detalleFactura">

        <EditTextPreference
            app:key="inf_superior"
            app:title="@string/inf_superior"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="inf_inferior"
            app:title="@string/inf_inferior"
            app:useSimpleSummaryProvider="false" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/otras_configuraciones">

        <SwitchPreference
            android:defaultValue="true"
            android:key="sonido"
            android:title="@string/sonido" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="mostrarAgotados"
            android:title="@string/MostrarAgotados" />

    </PreferenceCategory>

    <EditTextPreference
        android:defaultValue="+"
        android:key="edit_text_preference_codigo_area"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Codigo Area Whatsapp" />


</PreferenceScreen>