<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_monetization_on_24"
            android:title="@string/venta"
            app:itemIconSize="60dp"/>

        <item
            android:id="@+id/compra"
            android:icon="@drawable/baseline_add_business_24"
            android:title="@string/compra" />

        <item
            android:id="@+id/nav_nuevoProdcuto"
            android:icon="@drawable/baseline_bookmark_add_24"
            android:title="@string/NuevoProducto" />


        <item
            android:title="__________________________________"
            android:enabled="false"/>
        <item
            android:id="@+id/ventas"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/RegistrosVentas" />

        <item
            android:id="@+id/listaCompras"
            android:icon="@drawable/baseline_storefront_24"
            android:title="@string/RegistroCompras" />
    </group>

    <group>
    <item
        android:id="@+id/configuracion"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/configuracion" />

    </group>

</menu>