<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:contentInsetStart="10dp">
    <item
        android:id="@+id/action_crear_pdf"
        android:title="@string/pdf"
        android:orderInCategory="200"
        android:icon="@drawable/baseline_picture_as_pdf_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recibo_ingreso_pdf"
        android:title="@string/ReciboIngreso"
        android:orderInCategory="200"
        android:visible="false"
        android:icon="@drawable/car_ui_icon_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_agregar_producto"
        android:title="@string/Agregar_producto"
        android:orderInCategory="200"
        android:icon="@drawable/car_ui_icon_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_eliminar"
        android:title="@string/eliminar"
        android:orderInCategory="200"
        android:icon="@drawable/car_ui_icon_delete"
        app:showAsAction="never" />
</menu>
