<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:foregroundGravity="center">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_itemProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/azul_trasparente"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:autoSizeTextType="uniform"
                    android:textAppearance="@style/ColorFuenteEnFondoGris"
                    android:text="@string/cliente" />

                <TextView
                    android:id="@+id/textView_valor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:autoSizeTextType="uniform"
                    android:textAppearance="@style/ColorFuenteEnFondoGris"
                    android:gravity="right"
                    android:text="@string/total" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_vendedor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:textAppearance="@style/ColorFuenteEnFondoGris"
                    android:autoSizeTextType="uniform"
                    android:layout_gravity="center"
                    android:text="@string/vendedor" />

                <TextView
                    android:id="@+id/textView_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:textAppearance="@style/ColorFuenteEnFondoGris"
                    android:text="@string/fecha" />

                <TextView
                    android:id="@+id/textView_id"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:textAppearance="@style/ColorFuenteEnFondoGris"
                    android:gravity="right"
                    android:text="@string/id" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>